add documentation for product
